# gpx-speed-editor

./: .gitignore  CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/imgui/: CMakeLists.txt
libs/imgui/extensions/filebrowser/: LICENSE  imfilebrowser.h
libs/implot/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/app/: app.cpp  app.h  gpxadapter.cpp  gpxadapter.h  gpxspeedmodifier.cpp  gpxspeedmodifier.h  toolkit.cpp  toolkit.h
